# src/main/java/com/learn/turnup/apis/WordsApi.java
@@ -34,7 +34,7 @@ import java.util.Map;
 import java.util.Optional;
 import jakarta.annotation.Generated;
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-06-07T10:45:16.129411600+02:00[Europe/Prague]", comments = "Generator version: 7.9.0")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-06-09T09:25:28.267438100+02:00[Europe/Prague]", comments = "Generator version: 7.9.0")
 @Validated
 @Tag(name = "Word", description = "Words are lowest entities")
 public interface WordsApi {
@@ -44,14 +44,20 @@ public interface WordsApi {
      *
      * @param xUserId  (required)
      * @param batchWordUpdateDTO  (required)
-     * @return Words updated and/or deleted (status code 204)
+     * @return All words successfully updated and/or deleted (status code 204)
+     *         or Forbidden – User does not have access to one or more of the words; operation aborted (status code 403)
+     *         or Bad Request – Invalid request structure or data (status code 400)
+     *         or Unauthorized – Authentication required (status code 401)
      */
     @Operation(
         operationId = "updateWords",
         summary = "Update and/or delete words",
         tags = { "Word" },
         responses = {
-            @ApiResponse(responseCode = "204", description = "Words updated and/or deleted")
+            @ApiResponse(responseCode = "204", description = "All words successfully updated and/or deleted"),
+            @ApiResponse(responseCode = "403", description = "Forbidden – User does not have access to one or more of the words; operation aborted"),
+            @ApiResponse(responseCode = "400", description = "Bad Request – Invalid request structure or data"),
+            @ApiResponse(responseCode = "401", description = "Unauthorized – Authentication required")
         }
     )
     @RequestMapping(
